# ViewMyTelegram

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.MD
include/: TdParser.hpp  monitoring_chats.hpp
src/: TdParser.hpp  actions.cpp  auth.cpp  chats_to_parse.cpp  date_printer.hpp  main.cpp  monitoring_chats.cpp  overload.hpp  update.cpp
